# mclauncher

./: .dockerignore  .gitignore  DESIGN_DOC.md  Dockerfile  README.md  app.json  firebase.py  main.py  main_test.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json5
.github/workflows/: build-and-push.yaml  pull-requests.yaml  test.yaml
mclauncher/: app.py  compute_engine.py  config.py  firebase.py  instance.py  minecraft.py  shutter.py
mclauncher/api/v1/: app.py  schema.py
mclauncher/templates/: index.html
routers/: get_server.py  start_server.py
templates/: index.html
tests/: test_app.py  test_minecraft.py  util.py
tools/: add_authorized_users.py  get_id_token.py
