[tool.poetry]
name = "mclauncher"
version = "0.1.0"
description = "A web launcher for Minecraft server on Google Compute Engine."
authors = ["nownabe"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
