[tool.poetry]
name = "mclauncher"
version = "0.1.0"
description = "A web launcher for Minecraft server on Google Compute Engine."
authors = ["nownabe"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
Jinja2 = "^3.0.3"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
