[tool.poetry]
name = "mclauncher"
version = "0.1.0"
description = "A web launcher for Minecraft server on Google Compute Engine."
authors = ["nownabe"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
Jinja2 = "^3.0.3"
pydantic = "^1.8.2"
firebase-admin = "^5.2.0"
google-api-python-client = "^2.33.0"
google-cloud-firestore = "^2.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
requests = "^2.26.0"
pytest-cov = "^4.0.0"
anyio = "^3.4.0"
trio = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
